Fixed issues:     - #19 Document new rule format     - #18 Create a bounded score in reducer     - #17 change rule format     - #16 Use TOML for regex templates     - #15 Implement default actions     - #14 Define an Event interface     - #13 Make fails when shell doesn't have $GOPATH
Changes:
    - package refactoring (rules package moved inside engine package)
    - code refactoring:
        - No more engine.Match only engine.MatchOrFilter
        - Detection structure to hold detection information
    - project version bump

--- a/gene/makefile
+++ b/gene/makefile
@@ -1,4 +1,4 @@
-RELEASE=$(GOPATH)/release
+RELEASE=$(shell go env GOPATH)/release
 MAIN_BASEN_SRC=gene
 VERSION=$(shell git tag | sort -V | tail -1 | sed 's/^v//')
 COMMITID=$(shell git rev-parse HEAD)
