--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,6 +43,6 @@ jobs:
           git config --local user.name "Coverage Bot"
           git config --local user.email "<>"
           git add -A
-          git commit -m "Coverage updated commit=$GITHUB_SHA"
+          git commit -m "Coverage updated commit=$GITHUB_SHA" || true
           git push
       
